--- a/src/main/resources/templates/schedule/subject.html
+++ b/src/main/resources/templates/schedule/subject.html
@@ -204,7 +204,7 @@
                 <li class="child">한문교육과</li>
                 <li class="child">수학교육과</li>
                 <li class="child">유아교육과</li>
-                <li class="child">특수체육교육과</li>
+                <li class="child">특수체육교육과</li>ㅇ
             </ul>
             </li>
 
