--- a/src/main/resources/templates/studentInfo/studentRegistration.html
+++ b/src/main/resources/templates/studentInfo/studentRegistration.html
@@ -503,6 +503,10 @@
 
 <th:block layout:fragment="script">
     <script type="text/javascript">
+        $('.list-group-item').click(function (){
+            $('#department').val($(this).text());
+            $('#subjectModal').modal('hide');
+        })
         function departmentOpen(){
             $('#subjectModal').modal('show');
         }
