ckeditor size limit, path, studentInfo

--- a/src/main/resources/templates/matching/matchingUpdate.html
+++ b/src/main/resources/templates/matching/matchingUpdate.html
@@ -46,8 +46,6 @@
 </th:block>
 
 <th:block layout:fragment="script">
-    <script th:src="@{/scripts/ckeditor.js}">
-    </script>
     <script type="text/javascript">
         function dataSend() {
             var content=$('#content').val(CKEDITOR.instances.content.getData());
@@ -81,7 +79,7 @@
             });
             return false;
         }
-        var boardTypeName =[[${matching.getBoardtype()}]];
+        var boardTypeName = "[[${matching.getBoardtype()}]]";
         $("#" + boardTypeName).attr("selected","selected");
 
         $(function (){		// ckeditor config
