--- a/src/main/resources/templates/studentInfo/studentInfo.html
+++ b/src/main/resources/templates/studentInfo/studentInfo.html
@@ -99,7 +99,7 @@
         </div>
         <div class="modal-footer">
             <div class="float-right">
-              <button type="button" class="btn-blue" data-dismiss="modal" onClick="return updateNickNameOrEmail();">수정하기</button>
+              <button type="button" class="btn-blue" onClick="return updateNickNameOrEmail();">수정하기</button>
             </div>
           </div>
       </div>
