--- a/src/main/resources/templates/studentInfo/studentMyBoardList.html
+++ b/src/main/resources/templates/studentInfo/studentMyBoardList.html
@@ -14,16 +14,18 @@
         <table class="col-sm-auto table table-hover" style="margin:0">
           <thead>
             <tr>
-              <th style="text-align:center">제목</th>
-              <th style="text-align:center">작성일</th>
-              <th style="text-align:center">위치</th>
+              <th style="text-align:center; width:55%">제목</th>
+              <th style="text-align:center; width:15%">작성일</th>
+              <th style="text-align:center; width:15%">위치</th>
+              <th style="text-align:center; width:15%">세부위치</th>
             </tr>
           </thead>
 		<tbody id="tbody">
            <tr th:each="board :${myBoardList}">
-           <td style="width:60%"><a th:href="@{'/yu/board/boardView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a></td>
-           <td style="width:15%; text-align:center" th:text="${board.getRegister_date()}"></td>
-           <td style="width:25%; text-align:center" th:text="${board.getBoardtype()}"></td>
+           <td ><a th:href="@{'/yu/board/boardView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a></td>
+           <td style="text-align:center" th:text="${board.getRegister_date()}"></td>
+           <td style="text-align:center" th:text="${board.getBoardtype()}"></td>
+           <td style="text-align:center" th:text="${board.getBoardtype()}"></td>
         </tr>
         </tbody>
         </table>
