--- a/src/main/resources/templates/search/searchMatchingList.html
+++ b/src/main/resources/templates/search/searchMatchingList.html
@@ -153,8 +153,8 @@
             if(pageNum + nextOrPrev < 0) return false;
             else if(pageNum + nextOrPrev > [[${matchingList.getTotalPages()}]] - 1) return false;
 
-            location.href = "/yu/search/searchMatchingList?boardtype=" + [[${boardtype}]] + "&text=" + [[${text}]] + "&date=" 
-    			+ [[${date}]] + "&option=" + [[${option}]] + "&page=" + (pageNum + nextOrPrev);
+            location.href = "/yu/search/searchMatchingList?boardtype=" + "[[${boardtype}]]" + "&text=" + "[[${text}]]" + "&date=" 
+    			+ "[[${date}]]" + "&option=" + "[[${option}]]" + "&page=" + (pageNum + nextOrPrev);
     		return true;
         }
         
