--- a/src/main/resources/templates/studentInfo/studentInfo.html
+++ b/src/main/resources/templates/studentInfo/studentInfo.html
@@ -239,7 +239,10 @@
                       </thead>
                       <tbody id="myBoardTbody">
                         <tr th:each="board :${myBoardList}">
-                          <td><a th:href="@{'/yu/board/boardView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a></td>
+                          <td>
+                          	<a th:if="${board.getType()} == '게시판'" th:href="@{'/yu/board/boardView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a>
+                          	<a th:if="${board.getType()} == '매칭게시판'" th:href="@{'/yu/matching/matchingView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a>
+                          </td>
                           <td style="text-align:center" th:text="${board.getRegister_date()}"></td>
                           <td style="text-align:center" th:text="${board.getType()}"></td>
                           <td style="text-align:center" th:text="${board.getBoardtype()}"></td>
@@ -264,9 +267,12 @@
                       </thead>
                       <tbody id="myCommentTbody">
                         <tr th:each="comment :${myCommentList}">
-                          <td><a th:href="@{'/yu/board/boardView/'+${comment.getBno()}}" th:text="${comment.getContent()}"></a></td>
+                          <td>
+                          	<a th:if="${comment.getType()} == '게시판'" th:href="@{'/yu/board/boardView/'+${comment.getBno()}}" th:text="${comment.getContent()}"></a>
+                          	<a th:if="${comment.getType()} == '매칭게시판'" th:href="@{'/yu/matching/matchingView/'+${comment.getBno()}}" th:text="${comment.getContent()}"></a>
+                          </td>
                           <td style="text-align:center" th:text="${comment.getRegister_date()}"></td>
-                          <td style="text-align:center" th:text="${comment.getBoardtype()}"></td>
+                          <td style="text-align:center" th:text="${comment.getType()}"></td>
                           <td style="text-align:center" th:text="${comment.getBoardtype()}"></td>
                         </tr>
                       </tbody>
