--- a/src/main/resources/templates/search/searchBoardList.html
+++ b/src/main/resources/templates/search/searchBoardList.html
@@ -14,22 +14,22 @@
         <table class="col-sm-auto table table-hover" style="margin:0">
           <thead>
             <tr>
-              <th style="text-align:center">번호</th>
-              <th style="text-align:center">제목</th>
-              <th style="text-align:center">글쓴이</th>
-              <th style="text-align:center">작성일</th>
-              <th style="text-align:center">조회수</th>
-              <th style="text-align:center">좋아요</th>
+              <th style="text-align:center; width:5%;">번호</th>
+              <th style="text-align:center; width:50%;">제목</th>
+              <th style="text-align:center; width:20%;">글쓴이</th>
+              <th style="text-align:center; width:15%;">작성일</th>
+              <th style="text-align:center; width:5%;">조회수</th>
+              <th style="text-align:center; width:5%;">좋아요</th>
             </tr>
           </thead>
 		<tbody id="tbody">
         <tr th:each="boardlist :${board}">
-            <td style="width:5%; text-align:center" th:text="${boardlist.getBno()}"></td>
-            <td> <a th:href="@{'/yu/board/boardView/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
-            <td style="width:20%; text-align:center" th:text="${boardlist.getNickname()}"></td>
-            <td style="width:15%; text-align:center" th:text="${boardlist.getRegister_date()}"></td>
-            <td style="width:5%; text-align:center" th:text="${boardlist.getRead_count()}"></td>
-            <td style="width:5%; text-align:center" th:text="${boardlist.getLike_count()}"></td>
+            <td style="text-align:center" th:text="${boardlist.getBno()}"></td>
+            <td><a th:href="@{'/yu/board/boardView/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
+            <td style="text-align:center" th:text="${boardlist.getNickname()}"></td>
+            <td style="text-align:center" th:text="${boardlist.getRegister_date()}"></td>
+            <td style="text-align:center" th:text="${boardlist.getRead_count()}"></td>
+            <td style="text-align:center" th:text="${boardlist.getLike_count()}"></td>
         </tr>
         </tbody>
         </table>
