--- a/src/main/resources/templates/studentInfo/studentMyBoardList.html
+++ b/src/main/resources/templates/studentInfo/studentMyBoardList.html
@@ -22,10 +22,10 @@
           </thead>
 		<tbody id="tbody">
            <tr th:each="board :${myBoardList}">
-           <td >
+           <td>
            		<a th:if="${board.getType()} == '게시판'" th:href="@{'/yu/board/boardView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a>
-           		<a th:if="${board.getType()} == '매칭게시판'" th:href="@{'/yu/matching/matchingView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a>
-           	</td>
+           		<a th:if="${board.getType()} == '매칭'" th:href="@{'/yu/matching/matchingView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a>
+           </td>
            <td style="text-align:center" th:text="${board.getRegister_date()}"></td>
            <td style="text-align:center" th:text="${board.getType()}"></td>
            <td style="text-align:center" th:text="${board.getBoardtype()}"></td>
