1121 5:26AM chg writer text

--- a/src/main/resources/templates/matching/matchingList.html
+++ b/src/main/resources/templates/matching/matchingList.html
@@ -17,7 +17,7 @@
             	<th style="text-align:center; width:40%">제목</th>
             	<th style="text-align:center; width:5%">금액</th>
             	<th style="text-align:center; width:15%">작성자</th>
-           	 	<th style="text-align:center; width:15%">등록일</th>
+           	 	<th style="text-align:center; width:15%">작성일</th>
             	<th style="text-align:center; width:5%">해결여부</th>
             	<th style="text-align:center; width:5%">조회수</th>
         	</tr>
