--- a/src/main/resources/templates/search/searchAllMatchingList.html
+++ b/src/main/resources/templates/search/searchAllMatchingList.html
@@ -17,7 +17,7 @@
             	<th style="text-align:center; width:35%">제목</th>
             	<th style="text-align:center; width:5%">금액</th>
             	<th style="text-align:center; width:15%">작성자</th>
-           	 	<th style="text-align:center; width:15%">등록일</th>
+           	 	<th style="text-align:center; width:15%">작성일</th>
             	<th style="text-align:center; width:5%">해결여부</th>
             	<th style="text-align:center; width:10%">세부위치</th>
         	</tr>
@@ -86,7 +86,7 @@
     		var tr = document.createElement("tr");
     		var th = document.createElement("th");
     		
-    		th.colSpan = 5;
+    		th.colSpan = 7;
     		th.style.fontSize = "15px";
     		th.style.textAlign = "center";
     		th.innerHTML = "검색 결과가 없습니다";
