--- a/src/main/resources/templates/search/searchMatchingList.html
+++ b/src/main/resources/templates/search/searchMatchingList.html
@@ -18,7 +18,7 @@
             	<th style="text-align:center; width:40%">제목</th>
             	<th style="text-align:center; width:5%">금액</th>
             	<th style="text-align:center; width:15%">작성자</th>
-           	 	<th style="text-align:center; width:15%">등록일</th>
+           	 	<th style="text-align:center; width:15%">작성일</th>
             	<th style="text-align:center; width:5%">해결여부</th>
             	<th style="text-align:center; width:5%">조회수</th>
         	</tr>
@@ -115,9 +115,10 @@
     	if([[${matchingList.getTotalElements()}]] == 0) {
     		var tr = document.createElement("tr");
     		var th = document.createElement("th");
-    		th.style.textAlign ="center";
+    		
     		th.colSpan = 7;
     		th.style.fontSize = "15px";
+    		th.style.textAlign ="center";
     		th.innerHTML = "검색 결과가 없습니다";
     		tr.appendChild(th);
     		$("#tbody").append(tr);
